# chat_billing_example

./: .gitignore  README.md  main.py  pyproject.toml
src/api/: general_schemas.py
src/api/auth/: dependencies.py  endpoints.py  schemas.py
src/api/chat/: dependencies.py  endpoints.py  schemas.py
src/apps/: backend.py  llm_test.py
src/services/: auth.py  billing.py  llm.py  message.py
