[project]
name = "chat-billing-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "passlib>=1.7.4",
]
